@startuml Blackjack

class Player {
    name: String
    strategy: Strategy
    hand: Hand
    secondHand: Hand
    chip: Int
}
Player *-- Strategy
Player *-- Hand

interface Strategy {
    nextCommand(PlayingContext): Command
}
Strategy <|-- DealerStrategy
Strategy <|-- StdinStrategy

class Hand {
    score: Int
    scores: Int[]
    - cards: Card[]
    add(Card)
}
Hand o-- Card

class Card {
    suit: Suit
    number: Int
    displayNumber: String
}

class PlayingContext {
    knownDealerCard: Card
    playerHand: Hand
    otherHands: Hand[]
}

enum Command {
    Hit
    Stand
    Double
    Split
}

@enduml
